--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 .App {
-  text-align: center;
+  background-color: rgb(101, 99, 99);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
 }
